[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/spacial_forces_unit_gun_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://scenes/GunWeapon.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Cock"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -20.857 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GunSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GunSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire_gun"
} ]
}

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )

[node name="GunSprite" type="Sprite" parent="."]
position = Vector2( -3.42002, 6.05799 )
texture = ExtResource( 1 )
offset = Vector2( 7.23783, 0.44244 )
hframes = 4
vframes = 2
frame = 4

[node name="FirePosition" type="Position2D" parent="GunSprite"]
position = Vector2( 19.8218, -0.066967 )

[node name="GunAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cock = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Reset = SubResource( 3 )
anims/Shoot = SubResource( 4 )
